html/body overflow-x set to hidden to prevent scale smaller than 1 on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -36,10 +36,15 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   font: inherit;
   vertical-align: baseline; }
 
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   font-family: $body;
   padding: 16px 16px 32px 16px;
   background-color: #F4F4F4;
+  width: 100%;
   max-width: 1400px;
   margin: 0 auto;
 }
@@ -370,7 +375,8 @@ nav {
 }
 
 .screenshot-sm {
-  margin: 0 -18px;
+  margin: 0 -24px;
+  // margin: 0 -15px;
 }
 
 .elaborate {
